// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDN exports checks > did atomic.esm exports changed? 1`] = `
{
  "__webpack_require__": [Function],
  "atomicVersion": "<version>",
  "headlessVersion": "<version>",
}
`;

exports[`CDN exports checks > did index exports changed? 1`] = `
{
  "__webpack_require__": [Function],
  "applyPolyfills": [Function],
  "atomicVersion": "<version>",
  "defineCustomElements": [Function],
  "headlessVersion": "<version>",
  "setNonce": [Function],
}
`;

exports[`CDN exports checks > did index.esm exports changed? 1`] = `
{
  "MissingInterfaceParentError": [Function],
  "__webpack_require__": [Function],
  "bindLogDocumentOpenOnResult": [Function],
  "dispatchSearchBoxSuggestionsEvent": [Function],
  "elementHasNoQuery": [Function],
  "elementHasQuery": [Function],
  "fetchProductContext": [Function],
  "initializeBindings": [Function],
  "productContext": [Function],
  "resultContext": [Function],
}
`;
